[package]
name = "sx126x_async"
version = "0.3.0"
authors = ["Henk Oordt <hd@oordt.dev>", "Marcell Kovacs", "Gemini"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An async driver for the SX126X Family of LoRa modems"
keywords = ["embedded", "lora", "sx126x", "lorawan", "async"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"
repository = "https://github.com/tweedegolf/sx126x-rs"
exclude = [
    "/.cargo",
    "/target",
    "/.gitignore",
]

[dependencies]
embedded-hal = "1.0.0-rc.3"
embedded-hal-async = "1.0.0-rc.3"
critical-section = "^1"
log = { version = "0.4.20" }
